objects/Carrier_Systems__c.object
<CustomObject>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Carrier Systems</relationshipLabel>
        <relationshipName>Carrier_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTA</fullName>
                </value>
                <value>
                    <fullName>DISH</fullName>
                </value>
                <value>
                    <fullName>FIOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Carrier Systems</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Carrier Systems Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>